update travis to oraclejdk15